--- a/openatlas/templates/map.html
+++ b/openatlas/templates/map.html
@@ -60,12 +60,11 @@
 <link rel="stylesheet" href="/static/css/map.css">
 <link rel="stylesheet" href="/static/vendor/leaflet-1.3.4/leaflet-groupedlayercontrol-gh-pages/dist/leaflet.groupedlayercontrol.min.css">
 
-
 <script src="/static/vendor/leaflet-1.3.4/leaflet.js"></script>
 <script src="/static/node_modules/@fortawesome/fontawesome-free/js/all.min.js"></script>
 <script src="/static/vendor/leaflet-1.3.4/zoomdisplay/leaflet.zoomdisplay.js"></script>
 <script src="/static/vendor/leaflet-1.3.4/fullscreen/Leaflet.fullscreen.min.js"></script>
-<!--using modified version of leaflet-geonames for result list hack -->
+<!-- Using modified version of leaflet-geonames for result list hack -->
 <script src="/static/vendor/leaflet-1.3.4/Geonames-0.4.7/L.Control.Geonames.js"></script>
 <script src="/static/vendor/leaflet-1.3.4/markercluster-1.4.1/leaflet.markercluster.js"></script>
 <script src="/static/vendor/leaflet-1.3.4/usermarker-1.0/leaflet.usermarker.js"></script>
