--- a/openatlas/templates/user/view.html
+++ b/openatlas/templates/user/view.html
@@ -11,8 +11,9 @@
                 {{ _('edit')|button(url_for('user_update', id_=user.id)) }}
             {% endif %}
             {% if user.id != current_user.id and (user.group != 'admin' or current_user.group == 'admin') %}
-                {{ _('delete')|button(url_for('admin_index', action='delete_user', id_=user.id) + '#tab-user',
-                    onclick="return confirm('" + _('delete')|uc_first + " " + user.username.replace("'", '').replace('"', '') + "?');") }}
+                {{ _('delete')|button(
+                        url_for('admin_index', action='delete_user', id_=user.id) + '#tab-user',
+                        onclick="return confirm('" + _('Delete %(name)s?', name=user.username.replace('"', '').replace("'", '')) + "')") }}
             {% endif %}
             {{ _('activity')|button(url_for('user_activity', user_id=user.id)) }}
         </div>
