--- a/openatlas/templates/admin/index.html
+++ b/openatlas/templates/admin/index.html
@@ -141,25 +141,29 @@
                             {{ _('links')|button(url_for('admin_check_links')) }}
                             {{ _('link duplicates')|button(url_for('admin_check_link_duplicates')) }}
                         </div>
-                        <h1>{{ _('data transfer')|uc_first }}</h1>
-                        <div class="toolbar">
-                            {{ _('import')|button(url_for('import_index')) }}
-                            {% if 'manager'|is_authorized %}
-                                {{ (_('export') + ' CSV')|button(url_for('export_csv')) }}
-                                {{ (_('export') + ' SQL')|button(url_for('export_sql')) }}
-                            {% endif %}
-                            {% if 'admin'|is_authorized %}
-                                {{ _('execute SQL')|button(url_for('sql_index')) }}
-                            {% endif %}
-                        </div>
-                        <div class="toolbar">
-                            <h1>{{ 'API'|uc_first }}</h1>
-                            {{ 'admin/api'|manual }}
-                            {% if 'manager'|is_authorized %}
-                                {{ _('edit')|button(url_for('admin_settings', category='api')) }}
-                            {% endif %}
-                        </div>
-                        {{ info.api|display_info }}
+                        {% if 'manager'|is_authorized or imports %}
+                            <h1>{{ _('data transfer')|uc_first }}</h1>
+                            <div class="toolbar">
+                                {{ _('import')|button(url_for('import_index')) }}
+                                {% if 'manager'|is_authorized %}
+                                    {{ (_('export') + ' CSV')|button(url_for('export_csv')) }}
+                                    {{ (_('export') + ' SQL')|button(url_for('export_sql')) }}
+                                {% endif %}
+                                {% if 'admin'|is_authorized %}
+                                    {{ _('execute SQL')|button(url_for('sql_index')) }}
+                                {% endif %}
+                            </div>
+                        {% endif %}
+                        {% if 'manager'|is_authorized %}
+                            <div class="toolbar">
+                                <h1>{{ 'API'|uc_first }}</h1>
+                                {{ 'admin/api'|manual }}
+                                {% if 'manager'|is_authorized %}
+                                    {{ _('edit')|button(url_for('admin_settings', category='api')) }}
+                                {% endif %}
+                            </div>
+                            {{ info.api|display_info }}
+                        {% endif %}
                     </div>
                 {% endif %}
             </div>
