--- a/openatlas/templates/import/import_data.html
+++ b/openatlas/templates/import/import_data.html
@@ -1,7 +1,8 @@
 {% extends "layout.html" %}
 {% block title_name %} - {{ _('import')|uc_first }}{% endblock %}
 {% block breadcrumb %}
-    {{ [[_('admin'), 'admin_index'], [_('import'), 'import_index'], project, class_label]|crumb }}
+    <a href="{{ url_for('admin_index') }}#tab-data">{{ _('admin')|uc_first }}</a>&nbsp;>&nbsp;
+    {{ [[_('import'), 'import_index'], project, class_label]|crumb }}
 {% endblock %}
 {% block content %}
     {% if file_data.file %}
