--- a/openatlas/templates/import/index.html
+++ b/openatlas/templates/import/index.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 {% block title_name %} - {{ _('import')|uc_first }}{% endblock %}
 {% block breadcrumb %}
-    {{ [[_('admin'), 'admin_index'], _('import')]|crumb }}
+    <a href="{{ url_for('admin_index') }}#tab-data">{{ _('admin')|uc_first }}</a>&nbsp;> {{ _('import')|uc_first }}
 {% endblock %}
 {% block content %}
     <div class="toolbar">
