--- a/openatlas/templates/index/index.html
+++ b/openatlas/templates/index/index.html
@@ -13,7 +13,8 @@
             <div class="toolbar">
                 <p>
                     <a class="{{ config['CSS']['button']['primary'] }}" href="/static/manual/index.html" target="_blank">
-                        <img style="height:14px;" src="/static/images/icons/book.png" alt=''> {{ _('manual')|uc_first}}</a>
+                        <i class="fas fa-book"></i> {{ _('manual')|uc_first}}
+                    </a>
                     {{ _('model')|button(url_for('model_index')) }}
                 </p>
                 <p>
