--- a/openatlas/templates/reference/view.html
+++ b/openatlas/templates/reference/view.html
@@ -1,24 +1,24 @@
 {% extends "tabs.html" %}
-{% block title_name %} - {{ reference.name }}{% endblock %}
+{% block title_name %} - {{ entity.name }}{% endblock %}
 {% block breadcrumb %}
-    {{ [[_('reference'), 'reference_index'], reference.name]|crumb }}
+    {{ [[_('reference'), 'reference_index'], entity.name]|crumb }}
 {% endblock %}
 {% block tab_info %}
     <div class="toolbar">
         {{ 'menu/reference'|manual }}
         {% if 'contributor'|is_authorized %}
-            {{ _('edit')|button(url_for('reference_update', id_=reference.id)) }}
-            {{ reference|display_delete_link }}
+            {{ _('edit')|button(url_for('reference_update', id_=entity.id)) }}
+            {{ entity|display_delete_link }}
         {% endif %}
-        {{ reference.id|bookmark_toggle }}
+        {{ entity.id|bookmark_toggle }}
     </div>
-    <h1>{{ reference.name }}</h1>
+    <h1>{{ entity.name }}</h1>
     <div>
         {{ profile_image_id|display_profile_image }}
         <div style="float:left;">
             {{ info|display_info }}
-            {{ reference|note }}
-            {{ reference|description }}
+            {{ entity|note }}
+            {{ entity|description }}
         </div>
         <div style="clear:both;"></div>
     </div>
