--- a/openatlas/templates/source/view.html
+++ b/openatlas/templates/source/view.html
@@ -1,25 +1,25 @@
 {% extends "tabs.html" %}
-{% block title_name %} - {{ source.name }}{% endblock %}
+{% block title_name %} - {{ entity.name }}{% endblock %}
 {% block breadcrumb %}
-    {{ [[_('source'), 'source_index'], source.name]|crumb }}
+    {{ [[_('source'), 'source_index'], entity.name]|crumb }}
 {% endblock %}
 {% block tab_info %}
     <div class="toolbar">
         {{ 'menu/source'|manual }}
         {% if 'contributor'|is_authorized %}
-            {{ _('edit')|button(url_for('source_update', id_=source.id)) }}
-            {{ source|display_delete_link }}
+            {{ _('edit')|button(url_for('source_update', id_=entity.id)) }}
+            {{ entity|display_delete_link }}
         {% endif %}
-        {{ source.id|bookmark_toggle }}
+        {{ entity.id|bookmark_toggle }}
     </div>
-    <h1>{{ source.name }}</h1>
+    <h1>{{ entity.name }}</h1>
     <div>
         {{ profile_image_id|display_profile_image }}
         <div style="float:left;">
             {{ info|display_info }}
-            {{ source|note }}
-            {{ source|display_external_references }}
-            {{ source|description }}
+            {{ entity|note }}
+            {{ entity|display_external_references }}
+            {{ entity|description }}
         </div>
         <div style="clear:both;"></div>
     </div>
