Refactor forms: event insert

--- a/openatlas/templates/event/insert.html
+++ b/openatlas/templates/event/insert.html
@@ -8,5 +8,5 @@
     {% endif %}
 {% endblock %}
 {% block content %}
-    {{ form|display_form(manual_page='menu/event') }}
+    {{ form|display_new_form(manual_page='menu/event') }}
 {% endblock %}
