--- a/openatlas/templates/source/update.html
+++ b/openatlas/templates/source/update.html
@@ -12,5 +12,5 @@
             {{ _('reload')|button(url_for('source_update', id_=source.id)) }}
         </div>
     {% endif %}
-    {{ form|display_form(manual_page='menu/source') }}
+    {{ form|display_new_form(manual_page='menu/source') }}
 {% endblock %}
