--- a/openatlas/templates/reference/index.html
+++ b/openatlas/templates/reference/index.html
@@ -7,9 +7,9 @@
     <div class="toolbar">
         {{ 'menu/reference'|manual }}
         {% if 'contributor'|is_authorized %}
-            {{ _('bibliography')|button(url_for('reference_insert', code='bibliography')) }}
-            {{ _('edition')|button(url_for('reference_insert', code='edition')) }}
-            {{ _('external reference')|button(url_for('reference_insert', code='external_reference')) }}
+            {{ _('bibliography')|button(url_for('reference_insert', category='bibliography')) }}
+            {{ _('edition')|button(url_for('reference_insert', category='edition')) }}
+            {{ _('external reference')|button(url_for('reference_insert', category='external_reference')) }}
         {% endif %}
     </div>
     {{ table.display()|safe }}
