Refactor forms: various non standard forms

--- a/openatlas/templates/admin/check_similar.html
+++ b/openatlas/templates/admin/check_similar.html
@@ -4,7 +4,7 @@
     <a href="{{ url_for('admin_index') }}#tab-data">{{ _('admin')|uc_first }}</a>&nbsp;> {{ _('check similar names')|uc_first }}
 {% endblock %}
 {% block content %}
-    {{ form|display_form(manual_page='admin/data_integrity_checks')}}
+    {{ form|display_new_form(manual_page='admin/data_integrity_checks')}}
     {% if table %}
         {% if table.rows %}
             {{ table.display()|safe }}
