--- a/openatlas/templates/export/export_csv.html
+++ b/openatlas/templates/export/export_csv.html
@@ -1,12 +1,14 @@
 {% extends "layout.html" %}
 {% block title_name %} - {{ _('export CSV')|uc_first }}{% endblock %}
 {% block breadcrumb %}
-    <a href="{{ url_for('admin_index') }}#tab-data">{{ _('admin')|uc_first }}</a>&nbsp;> {{ _('export CSV')|uc_first }}
+    <div class="toolbar">
+        <a href="{{ url_for('admin_index') }}#tab-data">{{ _('admin')|uc_first }}</a>&nbsp;> {{ _('export CSV')|uc_first }}
+    </div>
 {% endblock %}
 {% block content %}
     {% if writeable %}
         <div style="float:left;margin-right: 1em;">
-            {{ form|display_form(manual_page='admin/export') }}
+            {{ form|display_new_form(manual_page='admin/export') }}
         </div>
     {% else %}
         <p><span class="error">{{ _('directory not writable')|uc_first }}: export/csv</span></p>
