--- a/openatlas/templates/admin/index.html
+++ b/openatlas/templates/admin/index.html
@@ -97,7 +97,7 @@
                         </div>
                         {{ info.mail|display_info }}
                         {% if settings.mail %}
-                            {{ form|display_form }}
+                            {{ form|display_new_form }}
                         {% endif %}
                     </div>
                 {% endif  %}
