--- a/openatlas/static/css/style.css
+++ b/openatlas/static/css/style.css
@@ -4,11 +4,6 @@ html, body, input, select, textarea {
     font-family: helvetica, arial, sans-serif;
 }
 
-.inactive,
-.inactive a {
-    color: #666666;
-}
-
 body {
     color: #000000;
 }
@@ -70,14 +65,7 @@ a.manual {
     margin-right: 0.2em;
 }
 
-form ul, form ol, form li {
-    list-style: none;
-    padding: 0;
-}
 
-#global-term {
-    width: 120px;
-}
 
 table.dataTable th {
     white-space:nowrap;
@@ -161,30 +149,6 @@ p.manual {
     margin-bottom: 0.5em;
 }
 
-input[type="text"].value-type, input[type="text"].integer {
-    width: 4em;
-    text-align: right;
-}
-
-input[type="text"].data-huebee {
-    width: 6em;
-    height: 1.2em;
-    font-size: 0.8em;
-    margin-top: 0.2em;
-}
-
-#network-form input[type="text"] {
-    width: 5em;
-}
-
-#global-search, #search {
-    text-transform: capitalize;
-}
-
-#show_passwords, form div.table-row div label[for='show_passwords'] {
-    display: none;
-}
-
 #disk-size {
     width: 40em;
     height: 1em;
@@ -240,17 +204,6 @@ p {
     margin: 0.5em 0 1em;
 }
 
-form input[type="text"].year {
-    text-align: right;
-    width: 4em;
-}
-
-input[type="text"].value_input {
-    width: 8em;
-    margin-top: 0.5em;
-    text-align: right;
-}
-
 .faded {
     opacity: 0.5;
 }
@@ -285,22 +238,6 @@ input[type="text"].value_input {
 #global-search {
     font-size: 0.8em;
     margin-right: 0;
-}
-
-#newsletter-form textarea {
-    font-size: 1em;
-    width: 30em;
-    height: 10em;
-}
-
-#newsletter-form input[type='text'] {
-    font-size: 1em;
-    width: 30em;
-}
-
-form input[type="text"].month, form input[type="text"].day {
-    text-align: right;
-    width: 2em;
 }
 
 textarea#description {
@@ -400,7 +337,7 @@ h2 {
     margin: 1em 0;
 }
 
-/* tables */
+/* Tables */
 table {
     border-collapse: inherit;
     border-spacing: 0.2em;
@@ -424,19 +361,6 @@ div.data-table > div > div {
     text-align: right;
 }
 
-form div.table-row > div {
-    text-align: right;
-    vertical-align: top;
-}
-
-form div.table-row div.table-cell {
-    text-align: left;
-}
-
-form div.table-row div.table-cell div {
-    margin-top: 0.3em;
-}
-
 table td {
     white-space: nowrap;
     overflow: hidden;
@@ -449,7 +373,76 @@ select[name="table_table_length"] {
     padding-bottom: initial;
 }
 
-/* forms */
+/* Forms */
+
+form ul, form ol, form li {
+    list-style: none;
+    padding: 0;
+}
+
+#global-term {
+    width: 120px;
+}
+
+input[type="text"].value-type, input[type="text"].integer {
+    width: 4em;
+    text-align: right;
+}
+
+input[type="text"].data-huebee {
+    width: 6em;
+    height: 1.2em;
+    font-size: 0.8em;
+    margin-top: 0.2em;
+}
+
+#network-form input[type="text"] {
+    width: 5em;
+}
+
+#global-search, #search {
+    text-transform: capitalize;
+}
+
+#show_passwords, form div.table-row div label[for='show_passwords'] {
+    display: none;
+}
+
+form input[type="text"].year {
+    text-align: right;
+    width: 4em;
+}
+
+input[type="text"].value_input {
+    width: 8em;
+    margin-top: 0.5em;
+    text-align: right;
+}
+
+#newsletter-form textarea {
+    font-size: 1em;
+    width: 30em;
+    height: 10em;
+}
+
+#newsletter-form input[type='text'] {
+    font-size: 1em;
+    width: 30em;
+}
+
+form input[type="text"].month, form input[type="text"].day {
+    text-align: right;
+    width: 2em;
+}
+
+form div.table-row > div {
+    text-align: right;
+}
+
+form div.table-row div.table-cell {
+    text-align: left;
+}
+
 label.error {
     padding-left: 0.5em;
 }
