Refactor forms: import, newsletter, began involvement

--- a/openatlas/templates/import/project_insert.html
+++ b/openatlas/templates/import/project_insert.html
@@ -5,5 +5,5 @@
     {{ [[_('import'), 'import_index'], _('project')]|crumb }}
 {% endblock %}
 {% block content %}
-    {{ form|display_form(manual_page='admin/import') }}
+    {{ form|display_new_form(manual_page='admin/import') }}
 {% endblock %}
