Refactor forms: login, password reset

--- a/openatlas/templates/profile/password.html
+++ b/openatlas/templates/profile/password.html
@@ -4,7 +4,7 @@
     {{ [[_('profile'), 'profile_index'], _('change password')]|crumb }}
 {% endblock %}
 {% block content %}
-    {{ form|display_form('password-form') }}
+    {{ form|display_new_form('password-form') }}
     <script>
         $(document).ready(function () {
             $("#show_passwords").after(function() {
