Layout for entity notes

--- a/openatlas/static/css/style.css
+++ b/openatlas/static/css/style.css
@@ -17,6 +17,11 @@ h1, h2, h3 {
     color: #666666;
 }
 
+.note {
+    background-color: #dddddd;
+    padding: 0.4em;
+}
+
 a,
 .info,
 .jstree-default .jstree-search {
