--- a/openatlas/templates/sql/execute.html
+++ b/openatlas/templates/sql/execute.html
@@ -16,7 +16,7 @@
             {{ _('There seems to be no recent backup, please make one') }} <a href="{{ url_for('export_sql') }}">{{ _('here') }}</a>.
         </p>
     {% else %}
-        {{ form|display_form(manual_page='admin/execute_sql') }}
+        {{ form|display_new_form(manual_page='admin/execute_sql') }}
         <p>
             {{ response|safe }}
         </p>
