--- a/openatlas/templates/translation/insert.html
+++ b/openatlas/templates/translation/insert.html
@@ -4,5 +4,5 @@
     {{ [[_('source'), 'source_index'], source, '+ ' + _('text')|uc_first]|crumb }}
 {% endblock %}
 {% block content %}
-    {{ form|display_form }}
+    {{ form|display_new_form }}
 {% endblock %}
