Refactor forms: added customize_labels(), reoved remaining usages of former build_form()

--- a/openatlas/templates/types/insert.html
+++ b/openatlas/templates/types/insert.html
@@ -4,5 +4,5 @@
     {{ [[_('types'), 'node_index'], root, '+']|crumb }}
 {% endblock %}
 {% block content %}
-    {{ form|display_form(manual_page='form/type') }}
+    {{ form|display_new_form(manual_page='form/type') }}
 {% endblock %}
