--- a/openatlas/templates/hierarchy/update.html
+++ b/openatlas/templates/hierarchy/update.html
@@ -6,7 +6,7 @@
 {% block content %}
     <div class="row">
         <div class="col">
-            {{ form|display_new_form(manual_page='form/type') }}
+            {{ form|display_form(manual_page='form/type') }}
         </div>
         <div class="col">
             {{ table.display()|safe }}
