--- a/openatlas/templates/object/update.html
+++ b/openatlas/templates/object/update.html
@@ -4,5 +4,5 @@
     {{ [[_('object'), 'object_index'], object_, _('edit')]|crumb }}
 {% endblock %}
 {% block content %}
-    {{ form|display_new_form(manual_page='menu/object') }}
+    {{ form|display_form(manual_page='menu/object') }}
 {% endblock %}
