--- a/openatlas/templates/reference/add.html
+++ b/openatlas/templates/reference/add.html
@@ -4,5 +4,5 @@
     {{ [[_('reference'), 'reference_index'], reference, _('link')]|crumb }}
 {% endblock %}
 {% block content %}
-    {{ form|display_new_form }}
+    {{ form|display_form }}
 {% endblock %}
