--- a/openatlas/templates/reference/insert.html
+++ b/openatlas/templates/reference/insert.html
@@ -8,6 +8,6 @@
     {% endif %}
 {% endblock %}
 {% block content %}
-    {{ form|display_new_form(manual_page='menu/reference') }}
+    {{ form|display_form(manual_page='menu/reference') }}
     {{ category|display_citation_example }}
 {% endblock %}
