--- a/openatlas/templates/relation/insert.html
+++ b/openatlas/templates/relation/insert.html
@@ -4,5 +4,5 @@
     {{ [[_('actor'), 'actor_index'], origin, '+ ' + _('relation')|uc_first]|crumb }}
 {% endblock %}
 {% block content %}
-    {{ form|display_new_form }}
+    {{ form|display_form }}
 {% endblock %}
