--- a/openatlas/templates/source/insert.html
+++ b/openatlas/templates/source/insert.html
@@ -8,5 +8,5 @@
     {% endif %}
 {% endblock %}
 {% block content %}
-    {{ form|display_new_form(manual_page='menu/source') }}
+    {{ form|display_form(manual_page='menu/source') }}
 {% endblock %}
