--- a/openatlas/templates/user/update.html
+++ b/openatlas/templates/user/update.html
@@ -6,5 +6,5 @@
     {{ _('edit')|uc_first }}
 {% endblock %}
 {% block content %}
-    {{ form|display_new_form(manual_page='admin/user') }}
+    {{ form|display_form(manual_page='admin/user') }}
 {% endblock %}
