--- a/openatlas/templates/actor/insert.html
+++ b/openatlas/templates/actor/insert.html
@@ -8,5 +8,5 @@
     {% endif %}
 {% endblock %}
 {% block content %}
-    {{ form|display_new_form(manual_page='menu/actor') }}
+    {{ form|display_form(manual_page='menu/actor') }}
 {% endblock %}
