--- a/openatlas/templates/actor/update.html
+++ b/openatlas/templates/actor/update.html
@@ -12,5 +12,5 @@
             {{ _('reload')|button(url_for('actor_update', id_=actor.id)) }}
         </p>
     {% endif %}
-    {{ form|display_new_form(manual_page='menu/actor') }}
+    {{ form|display_form(manual_page='menu/actor') }}
 {% endblock %}
