--- a/openatlas/templates/export/export_sql.html
+++ b/openatlas/templates/export/export_sql.html
@@ -7,7 +7,7 @@
 {% endblock %}
 {% block content %}
     {% if writeable %}
-        {{ form|display_new_form(manual_page='admin/export') }}
+        {{ form|display_form(manual_page='admin/export') }}
     {% else %}
         <p><span class="error">{{ _('directory not writable')|uc_first }}: export/sql</span></p>
     {% endif %}
