--- a/openatlas/templates/import/import_data.html
+++ b/openatlas/templates/import/import_data.html
@@ -22,7 +22,7 @@
             <span style="font-weight: bold;">csv</span> -
             {{ _('example files')|uc_first }}: <a href="/static/import/example.csv">example.csv</a>
         </p>
-        {{ form|display_new_form(manual_page='admin/import') }}
+        {{ form|display_form(manual_page='admin/import') }}
         {% for item in messages['error'] %}
             <span class="error">{{ _('error')|uc_first }} - {{ item }}</span><br>
         {% endfor %}
