--- a/openatlas/templates/involvement/insert.html
+++ b/openatlas/templates/involvement/insert.html
@@ -4,5 +4,5 @@
     {{ [[_(origin.view_name), origin.view_name + '_index'], origin, _('involvement')]|crumb }}
 {% endblock %}
 {% block content %}
-    {{ form|display_new_form }}
+    {{ form|display_form }}
 {% endblock %}
