--- a/openatlas/templates/place/map_draw.html
+++ b/openatlas/templates/place/map_draw.html
@@ -1,7 +1,7 @@
 <div class="row">
     <div class="col-4">
         <div id='map-info-display' style="float:left;">
-            {{ form|display_new_form }}
+            {{ form|display_form }}
         </div>
     </div>
     <div class="col-8">
