--- a/openatlas/templates/reference/link-update.html
+++ b/openatlas/templates/reference/link-update.html
@@ -4,5 +4,5 @@
     {{ [[_(origin.view_name), origin.view_name + '_index'], origin, linked_object, _(edit)]|crumb }}
 {% endblock %}
 {% block content %}
-    {{ form|display_new_form }}
+    {{ form|display_form }}
 {% endblock %}
