--- a/openatlas/templates/relation/update.html
+++ b/openatlas/templates/relation/update.html
@@ -4,5 +4,5 @@
     {{ [[_('actor'), 'actor_index'], origin, related, _('edit')]|crumb }}
 {% endblock %}
 {% block content %}
-    {{ form|display_new_form }}
+    {{ form|display_form }}
 {% endblock %}
