--- a/openatlas/templates/user/activity.html
+++ b/openatlas/templates/user/activity.html
@@ -4,6 +4,6 @@
     {{ [[_('admin'), 'admin_index'], _('activity')]|crumb }}
 {% endblock %}
 {% block content %}
-    {{ form|display_new_form }}
+    {{ form|display_form }}
     {{ table.display()|safe }}
 {% endblock %}
