--- a/openatlas/templates/admin/index.html
+++ b/openatlas/templates/admin/index.html
@@ -15,6 +15,7 @@
                 {% endif  %}
                 {% if 'manager'|is_authorized: %}
                     {{ 'modules'|tab_header }}
+                    {{ 'reference_systems'|tab_header}}
                     {{ 'map'|tab_header }}
                     {{ 'content'|tab_header }}
                 {% endif %}
@@ -127,6 +128,14 @@
                         </div>
                         <div>
                             {{ tables.content.display('content')|safe }}
+                        </div>
+                    </div>
+                    <div class="tab-pane fade" role="tabpanel" id="tab-reference-systems">
+                        <div class="toolbar">
+                            {{ 'admin/reference_systems'|manual }}
+                        </div>
+                        <div>
+                            show table
                         </div>
                     </div>
                 {% endif  %}
