--- a/openatlas/templates/admin/index.html
+++ b/openatlas/templates/admin/index.html
@@ -15,7 +15,7 @@
                 {% endif  %}
                 {% if 'manager'|is_authorized: %}
                     {{ 'modules'|tab_header }}
-                    {{ 'reference_systems'|tab_header}}
+                    {{ 'reference_system'|tab_header}}
                     {{ 'map'|tab_header }}
                     {{ 'content'|tab_header }}
                 {% endif %}
@@ -130,12 +130,12 @@
                             {{ tables.content.display('content')|safe }}
                         </div>
                     </div>
-                    <div class="tab-pane fade" role="tabpanel" id="tab-reference-systems">
+                    <div class="tab-pane fade" role="tabpanel" id="tab-reference-system">
                         <div class="toolbar">
-                            {{ 'admin/reference_systems'|manual }}
+                            {{ 'admin/reference_system'|manual }}
                         </div>
                         <div>
-                            show table
+                            {{ tables.reference_system.display('reference_system')|safe }}
                         </div>
                     </div>
                 {% endif  %}
