--- a/openatlas/templates/reference_system/update.html
+++ b/openatlas/templates/reference_system/update.html
@@ -1,7 +1,7 @@
 {% extends 'layout.html' %}
 {% block title_name %} - {{ entity.name }}{% endblock %}
 {% block breadcrumb %}
-    <a href="{{ url_for('admin_index') }}#reference-system">{{ _('reference system')|uc_first }}</a>&nbsp;
+    <a href="{{ url_for('admin_index') }}#tab-reference-system">{{ _('reference system')|uc_first }}</a>&nbsp;
     > {{ entity.name }}
     > {{ _('edit')|uc_first }}
 {% endblock %}
